@@ -47,6 +47,7 @@ import ca.bc.gov.backendstartapi.exception.GeneticClassNotFoundException;
 import ca.bc.gov.backendstartapi.exception.InvalidSeedlotRequestException;
 import ca.bc.gov.backendstartapi.exception.NoSpuForOrchardException;
 import ca.bc.gov.backendstartapi.exception.OracleApiProviderException;
+import ca.bc.gov.backendstartapi.exception.PtGeoDataNotFoundException;
 import ca.bc.gov.backendstartapi.exception.SeedlotConflictDataException;
 import ca.bc.gov.backendstartapi.exception.SeedlotFormValidationException;
 import ca.bc.gov.backendstartapi.exception.SeedlotNotFoundException;
@@ -664,7 +665,8 @@ public class SeedlotService {
   }
 
   private GeospatialRespondDto buildMeanGeomSeedlot(Seedlot seedlotInfo) {
-    if (seedlotInfo.getCollectionLatitudeDeg() == null) {
+    if (seedlotInfo.getCollectionLatitudeDeg() == null
+        || seedlotInfo.getCollectionLongitudeDeg() == null) {
       return null;
     }
     return new GeospatialRespondDto(
@@ -678,16 +680,23 @@ public class SeedlotService {
         null,
         seedlotInfo.getCollectionElevation());
   }
-  
+
   private GeospatialRespondDto buildMeanGeomSmpMix(List<SmpMix> smpMixsData) {
     if (smpMixsData.isEmpty()) {
       return null;
     }
     List<GeospatialRequestDto> smpMixIdAndProps = smpMixsData.stream()
         .map(smpMix -> new GeospatialRequestDto(
-            Long.valueOf(smpMix.getParentTreeId()), smpMix.getProportion()))
-        .collect(Collectors.toList());
-    return parentTreeService.calcMeanGeospatial(smpMixIdAndProps);
+            (long) smpMix.getParentTreeId(), smpMix.getProportion()))
+        .toList();
+    try {
+      return parentTreeService.calcMeanGeospatial(smpMixIdAndProps);
+    } catch (PtGeoDataNotFoundException e) {
+      SparLog.warn(
+          "Oracle geospatial data unavailable for SMP mix parent trees: {}",
+          e.getMessage());
+      return null;
+    }
   }
 
   /**
